fixed flex-wrap to support mobile browsers

--- a/resources/static/styles/petition.css
+++ b/resources/static/styles/petition.css
@@ -106,24 +106,20 @@ section {
   margin-right: 1em;
 }
 
-#petition-intro,
-#petition,
-#petition-details {
+.container {
   display: flex;
   flex-wrap: wrap;
 }
 
 #petition-intro-image {
-  flex: 1 1 30%;
+  width: 15em;
+  flex-grow: .3;
   margin-right: 1em;
-  vertical-align: top;
-  min-width: 250px;
-  max-width: 500px;
 }
 
 #petition-intro-text {
-  flex: 1 1 50%;
-  vertical-align: top;
+  width: 15em;
+  flex-grow: 1;
   font: 300 20px/30px 'open_sanslight', arial, sans-serif;
 }
 
@@ -135,7 +131,8 @@ section {
 #petition-form,
 #petition-details-text,
 #petition-details-history {
-  flex: 1 1 40%;
+  width: 15em;
+  flex-grow: 1;
   margin-top:1em;
   padding:1em 2em 2em 2em;
   background-color: #f5f5f5;
